--- a/styles/projects.css
+++ b/styles/projects.css
@@ -5,19 +5,18 @@
 
 .projects-header {
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
+    color: var(--text-light);
 }
 
 .projects-header h2 {
-    font-size: 2.25rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-    color: var(--text);
+    margin-bottom: 1.2rem;
 }
 
 .projects-header p {
-    color: var(--text-light);
-    max-width: 42rem;
+    font-size: 1.1rem;
+    color: #A1A1AA;
+    max-width: 600px;
     margin: 0 auto;
 }
 
